assets/css/style.css
/* Copied from Pairfonts.com - Nunito for header and Roboto Mono for all other text */
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@900&family=Roboto+Mono:wght@300&display=swap");

/* Logo */

#logo {
  height: 15px;
  font-family: nunito, sans-serif;
} 

/* All other text font */ 

.other-text {
  font-family: 'Roboto Mono', sans-serif;
}
 

/* Hero image */ 

 #hero-image {
      height: 100%;
      width: 100%;
      background: url(../images/hero-image.jpg) no-repeat center center; 

  } 


/* Middle cirkel for play button all difficulty levels */

.middle-circkel {
  background-color: white;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

  
/* Interface for easy */ 

.easy-color-one {
  background-color: green;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
} 

.easy-color-two {
  background-color: blue;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.easy-color-three {
  background-color: yellow;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.easy-color-four {
  background-color: red;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}


/* Interface for Medium */

.medium-color-one {
  background-color: green;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
} 

.medium-color-two {
  background-color: blue;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.medium-color-three {
  background-color: pink;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.medium-color-four {
  background-color: yellow;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
} 

.medium-color-five {
  background-color: grey;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
} 

.medium-color-six {
  background-color: red;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}


/* Interface for Hard */
  
.hard-color-one { 
  background-color: green;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;

}

.hard-color-two {
  background-color: blue;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}
 
.hard-color-three {
  background-color: brown;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.hard-color-four {
  background-color: pink;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.hard-color-five {
  background-color: yellow;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.hard-color-six {
  background-color: purple;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.hard-color-seven {
  background-color: grey;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

.hard-color-eight {
  background-color: red;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  display: inline-block;
}

